[package]
name = "TestTask"
version = "0.1.0"
authors = ["valera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.88"
serde_derive = "1.0.88"
rocket-multipart-form-data = "0.8.1"
base64 = "0.12.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
#opencv = "0.34"
#Reqwest lib
reqwest = { version = "0.10", features = ["blocking", "json"] }